# odb4py_1.1.1

./: .readthedocs.yaml  CHANGELOG.md  CMakeLists.txt  NOTICE  README.md  __init__.py  core.c  odb_install_dir  odbdump.stderr  output.nc  pyproject.toml  setup.cfg  setup.py  test.py
bindings/: CMakeLists.txt  convert.c  core.c  main.c  meta_module.c  old_io_module.c
bindings/src/: dbarray_module.c  dca_module.c  dict_module.c  fetch_module.c  geo_module.c  info_module.c  io_module.c  meta_module.c  nc_module.c
docs/: Installation.rst  Introduction.rst  Usage.rst  conf.py  index.rst  requirements.txt
docs/_build/doctrees/: Dependencies.doctree  Installation.doctree  Introduction.doctree  Usage.doctree  before_retrieve.doctree  data_retrieval.doctree  environment.pickle  index.doctree  installation.doctree  introduction.doctree  odb_in_python_ecosystem.doctree  open_odb_loop.doctree
docs/_build/html/: .buildinfo  Dependecies.html  Dependencies.html  Installation.html  Introduction.html  Usage.html  api.html  before_retrieve.html  data_retrieval.html  dependecies.html  genindex.html  index.html  installation.html  introduction.html  objects.inv  odb_in_python_ecosystem.html  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: odb_in_python_ecosystem.rst.txt
docs/source/: conf.py
examples/odb_samples/rmi/ECMA.synop/dca/: body.dca  conv.dca  conv_body.dca  desc.dca  errstat.dca  hdr.dca  index.dca  modsurf.dca  poolmask.dca  timeslot_index.dca  update_1.dca  update_2.dca  update_3.dca
include/: dict_module.h  exceptions.h  io_module.h  macros.h  pyspam.h
odb/share/odb/cmake/: odb-config.cmake
odb/src/aux/: generic.c  newio.c  odbdump.c
odb/src/compiler/: CMakeLists.txt
odb/src/lib/: poolmasking.c
utils/: __init__.py  env.py  exceptions.py  odb_glossary.py  odb_ob.py  parser.py  setting_env.py
wheelhouse/: odb4py-1.0.0rc1-cp39-cp39-manylinux_2_17_x86_64.manylinux2014_x86_64.whl
